--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "dadroit-json-generator",
   "displayName": "Dadroit JSON Generator",
   "description": "Generate nested sample JSON data using custom templates.",
-  "version": "1.1.7",
-  "icon": "images/512x512.png",
+  "version": "1.2.1",
+  "icon": "images/icon.png",
   "publisher": "Dadroit",
   "preview": false,
   "keywords": [
@@ -57,12 +57,11 @@
     "vscode:prepublish": "npm run compile",
     "compile": "webpack",
     "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "package": "vsce package",
     "lint": "eslint src --ext ts"
   },
   "devDependencies": {
     "@types/node": "16.x",
-    "@types/unzipper": "^0.10.7",
     "@types/vscode": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
@@ -72,8 +71,5 @@
     "vsce": "^2.15.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "unzipper": "^0.10.14"
   }
 }
